make nav fixed on mobile (#76)

--- a/sitemedia/scss/base/_navigation.scss
+++ b/sitemedia/scss/base/_navigation.scss
@@ -5,6 +5,19 @@
   background-color: $header-background-color;
   color: $header-text-color;
   z-index: 10;
+  position: fixed;
+
+  & ~ main {
+      margin-top: 56px;
+  }
+
+  @media screen and (min-width: $medium-breakpoint) {
+      position: relative;
+
+      & ~ main {
+          margin-top: 0;
+      }
+  }
 
   @include grid-media($xlarge-viewport-grid) {
     position: fixed;
